--- a/package.json
+++ b/package.json
@@ -9,11 +9,18 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emotion/react": "^11.11.1",
+    "@emotion/styled": "^11.11.0",
+    "@mui/icons-material": "^5.14.19",
+    "@mui/material": "^5.14.19",
+    "@mui/x-date-pickers": "^6.18.2",
     "@types/node": "20.4.8",
     "@types/react": "18.2.18",
     "@types/react-dom": "18.2.7",
+    "ag-grid-react": "^31.0.0",
     "eslint": "8.46.0",
     "eslint-config-next": "13.4.12",
+    "material-react-table": "^2.0.4",
     "next": "13.4.12",
     "react": "18.2.0",
     "react-dom": "18.2.0",
